# esp32-photo-frame

./: .gitignore  CHANGELOG.md  DISPLAY_STRIPES_INVESTIGATION.md  DITHERING_ALGORITHMS_IMPLEMENTATION.md  DYNAMIC_CONFIG_TODO.md  GDEP073E01_FORMAT_UPDATE.md  GOOD_DISPLAY_BEST_PRACTICES_COMPLIANCE.md  NATIVE_FORMAT_INTEGRATION_COMPLETE.md  POWER_RECOVERY_AND_HARDWARE_RECOMMENDATIONS.md  README.md  blog_post.md  photo-frame.code-workspace  specs.md
android/PhotoFrameProcessor/: README.md  build.gradle  settings.gradle
android/PhotoFrameProcessor/app/: build.gradle  proguard-rules.pro
android/PhotoFrameProcessor/gradle/: libs.versions.toml
assets/: Sketch 2.fzz  Sketch.fzz  adafruit-huzzah-feather-esp32-v2.fzz  auto.sh  bmp_to_lcd.sh  convert_all.sh  convert_h.sh  convert_landscape.sh  convert_portrait.sh  convert_v.sh  dfrobot-firebeetle2-esp32-c6.fzz  find_subject.py  resize_and_annotate.sh  unexpected maker feather s3.fzz
assets/kicad/: fabrication-toolkit-options.json  fp-info-cache  project.kicad_pcb  project.kicad_prl  project.kicad_pro  project.kicad_sch  project.kicad_sch_old  project.step  sym-lib-table
assets/kicad/database/: project.db
assets/project/: project.kicad_pcb  project.kicad_prl  project.kicad_pro  project.kicad_sch
assets/scripts/: auto.sh
assets/scripts/private/: auto_resize_and_annotate.sh  combine_images.sh  resize_and_annotate.sh  utils.sh
docs/: bin_2_image.md  config_reference.md  display_power_control.md  flutter_app.md  google_drive_api.md  image_processing.md  rust-photoframe-processor.md  sd_card_configuration.md  tech_specs.md  weather.md  wiring-diagram.md
photoframe_flutter/: CHANGELOG.md  README.md  pubspec.yaml
photoframe_flutter/lib/: main.dart
photoframe_flutter/lib/models/: config_profile.dart  config_profile.g.dart  processing_config.dart  processing_config.g.dart
photoframe_flutter/lib/providers/: processing_provider.dart
photoframe_flutter/macos/: Podfile
photoframe_flutter/test/: widget_test.dart
platformio/: .gitignore  BUFFER_MANAGEMENT.md  CONFIG_REFERENCE.md  DISPLAY_DEBUG_CHANGES.md  DISPLAY_RENDERING_ARCHITECTURE.md  DISPLAY_TROUBLESHOOTING_COMPLETE_GUIDE.md  ENABLE_DIAGNOSTIC_MODE.md  FIX_BUSY_TIMEOUT.md  NATIVE_FORMAT_TEST.md  RELEASE_NOTES_v0.10.0.md  RUN_DIAGNOSTIC_INSTRUCTIONS.md  TEST_PROGMEM_VS_SD.md  USE_POTENTIOMETER_FEATURE.md  example_config.json  example_google_drive_config.json  platformio.ini  test_google_drive.py  weather_example.json
platformio/data/: .keep  config.json.template  temp_image.tmp
platformio/icons/: generate_all.sh  svg_to_headers.sh
platformio/include/: GxEPD2_selection_check.h  _locale.h  battery.h  board_util.h  canvas_renderer.h  config.h  datetime_utils.h  display_7c_helper.h  display_debug.h  display_diagnostic.h  display_driver.h  display_driver_6c.h  display_driver_bw.h  display_manager.h  display_util.h  errors.h  geometry.h  google_drive.h  google_drive_client.h  google_drive_toc_parser.h  image_buffer.h  io_util.h  io_utils.h  littlefs_manager.h  messages.h  ota_integration.h  ota_update.h  preferences_helper.h  renderer.h  rgb_status.h  rtc_util.h  sd_card.h  sd_card_toc_parser.h  spi_manager.h  string_utils.h  test_image.h  test_photo_6c_portrait.h  unified_config.h  weather.h  wifi_manager.h
platformio/ota/: RELEASE_SUMMARY.md  ota_manifest.json
platformio/partitions/: photo_frame_16mb.csv  photo_frame_16mb_ota.csv  photo_frame_8mb.csv
platformio/scripts/: bin_to_header.py  convert_6c_bin_to_progmem.py  convert_6c_to_native.py  convert_7c_bitmap_to_bin.py  create_simplified_display_debug.py  generate_test_bitmaps_6c.py  generate_test_bitmaps_7c.py  generate_test_pattern.py
platformio/src/: battery.cpp  board_util.cpp  canvas_renderer.cpp  config.cpp  datetime_utils.cpp  display_7c_helper.cpp  display_debug.cpp  display_debug.h  display_diagnostic.cpp  display_driver_6c.cpp  display_driver_bw.cpp  display_manager.cpp  display_util.cpp  errors.cpp  google_drive.cpp  google_drive_client.cpp  google_drive_toc_parser.cpp  image_buffer.cpp  io_util.cpp  io_utils.cpp  littlefs_manager.cpp  locale.cpp  main.cpp  ota_integration.cpp  ota_update.cpp  preferences_helper.cpp  renderer.cpp  rgb_status.cpp  rtc_util.cpp  sd_card.cpp  sd_card_toc_parser.cpp  spi_manager.cpp  test_display_driver.cpp  unified_config.cpp  weather.cpp  wifi_manager.cpp
platformio/weather_icons/: README.md
rust/bin2bmp/: Cargo.toml
rust/bmp2cpp/: Cargo.toml
rust/photoframe-processor/: CHANGELOG.md  Cargo.toml  GDEP073E01_MODE1_FORMAT.md  NATIVE_FORMAT_INTEGRATION_TODO.md  OPTIMIZATION_REPORT.md  README.md  build_all.sh  test_config.pfconfig
rust/photoframe-processor/src/: cli.rs  config_file.rs  json_output.rs  lib.rs  main.rs  utils.rs
rust/photoframe-processor/src/gui/: app.rs  app_processing.rs  main.rs
rust/photoframe-processor/src/image_processing/: annotate.rs  auto_optimizer.rs  batch.rs  binary.rs  color_correction.rs  combine.rs  convert.rs  convert_improved.rs  dithering.rs  mod.rs  onnx_detection.rs  optimization_report.rs  orientation.rs  resize.rs  subject_detection.rs  subject_detection_stub.rs
scripts/: .gitattributes  auto.sh  bin2bmp  build_ota_release.sh
scripts/private/: bmp2cpp  bmp_to_lcd.sh  convert.sh  find_subject.py  resize_and_annotate.sh
(+348 files in other folders)
