[package]
name = "photoframe-processor"
version = "0.1.0"
edition = "2021"
authors = ["Alessandro Crugnola"]
description = "High-performance image processor for converting images to binary or bitmaps ready files to be displayed on ESP32 board with e-paper display."
license = "MIT"
repository = "https://github.com/sephiroth74/arduino/esp32-photo-frame"
keywords = ["esp32", "e-paper", "image-processing", "cli", "embedded"]
categories = ["multimedia::images", "command-line-utilities", "embedded"]
readme = "README.md"

[[bin]]
name = "photoframe-processor"
path = "src/main.rs"

[dependencies]
# Core image processing
image = { version = "0.25.8", features = ["jpeg", "png", "webp", "tiff"] }
imageproc = "0.25"
fast_image_resize = "5.3.0"

# CLI interface
clap = { version = "4.5.48", features = ["derive"] }
indicatif = "0.18.0"
console = "0.16.1"

# File and path handling
walkdir = "2.5.0"
rayon = "1.11.0"
anyhow = "1.0.100"

# EXIF data handling  
kamadak-exif = "0.6.1"

# Text rendering
ab_glyph = "0.2.32"
rusttype = "0.9.3"

strum = "0.27.2"
strum_macros = "0.27.2"

# Parallel processing
num_cpus = "1.17.0"

# Serialization for configuration
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Base64 encoding for filename generation
base64 = "0.22.1"

# Text processing
regex = "1.11.3"

# Random number generation for portrait pairing
rand = "0.9.2"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
